@@ -1767,7 +1767,8 @@ def broken_barh(xranges, yrange, hold=None, **kwargs):
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @autogen_docstring(Axes.boxplot)
-def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None, hold=None):
+def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None,
+            hold=None, patch_artist=False):
     ax = gca()
     # allow callers to override the hold state by passing hold=True|False
     washold = ax.ishold()
@@ -1775,7 +1776,8 @@ def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None,
     if hold is not None:
         ax.hold(hold)
     try:
-        ret = ax.boxplot(x, notch, sym, vert, whis, positions, widths)
+        ret = ax.boxplot(x, notch, sym, vert, whis, positions, widths,
+                         patch_artist=patch_artist)
         draw_if_interactive()
     finally:
         ax.hold(washold)
